# swift-mlx-text-to-sql

./: .gitignore  .semgrep.yml  CONTEXT.md  CREG — Product Requirements Document.md  README.md  model-manifest.json  skills-lock.json  triage_decisions.db
fine-tuning/: README.md  main.py  pyproject.toml
fine-tuning/config/: QWEN-NOTICE.txt  corpus-manifest.json  promotion-gates.json  qlora.yaml
fine-tuning/eval/: campaign.py  ex.py  experiment.py  file_integrity.py  prompt_contract.py  run_artifacts.py  run_consistency.py  run_eval.py  run_matrix.py  selection.py  wandb_evidence.py
fine-tuning/synth/: generate_training.py
fine-tuning/tests/: test_artifact_verification.py  test_binding_regressions.py  test_campaign.py  test_ci_contracts.py  test_consistency.py  test_debug_model_materialization.py  test_ex.py  test_experiment_platform.py  test_extract_sql.py  test_grammar.py  test_invariants.py  test_model_manifest.py  test_multi_snapshot_eval.py  test_promotion_eligibility.py  test_prompt_contract.py  test_publication.py  test_run_artifacts.py  test_run_eval.py  test_selection.py  test_training_config.py  test_wandb_skill_helpers.py
fine-tuning/tools/: analyze_binding_regressions.py  analyze_consistency.py  analyze_matrix.py  analyze_promotion_eligibility.py  check_ci_contracts.py  check_semgrep_fixtures.py  evaluate_checkpoints.py  expand_gold.py  explain_parity.py  fetch_model.py  finalize_production.py  generate_corpus_variants.py  generate_db.py  generate_eval_snapshots.py  generate_grammar.py  import_wandb_history.py  inspect_release_bundle.py  leaderboard.py  (+9 more)
(+484 files in other folders)
