[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.24.0",
    "mlx>=0.32.0",
    "mlx-lm>=0.31.3",
    "transformers>=5.14.1",
    "xgrammar>=0.2.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
